refactor: simplified implementation of server statement execution